# youtube-chat-rust

./: Cargo.toml  LICENSE
src/: client.rs  cookie.rs  lib.rs  main.rs  request.rs  types.rs
src/internal/: banner.rs  common.rs  message.rs  mod.rs  poll.rs  ticker.rs
src/types/: author.rs  event.rs  message.rs  mod.rs  poll.rs
