[package]
name = "youtube-chat"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[dependencies]
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "gzip"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"
